# bytegrader

./: .dockerignore  .gitignore  .npmrc  Dockerfile  LICENSE  Makefile  README.md  SECURITY_TESTING.md  SECURITY_TESTING_CHECKLIST.md  docker-compose.yml  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy-docs.yml  publish-pypi.yml  publish-systemd-executor-pypi.yml
bytegrader/: __init__.py  __main__.py  hub.py
bytegrader/autograde/: queue.py  service.py  worker.py
bytegrader/autograde/executors/: __init__.py  base.py  mock.py  simple.py  systemd.py  wasm.py
bytegrader/cli/: main.py
bytegrader/cli/commands/: serve.py
bytegrader/config/: config.py
bytegrader/core/auth/: __init__.py  decorators.py  permissions.py  policies.py
bytegrader/core/database/: connection.py  migrations.py
bytegrader/core/exceptions/: __init__.py  hub.py
bytegrader/core/models/: __init__.py  asset.py  base.py  course.py  enum.py  grade.py  notebook.py  submission.py  user.py
bytegrader/core/observability/: __init__.py  opentelemetry.py  sentry.py
bytegrader/core/utils/: __init__.py  datetime.py  hub.py  notebook.py
bytegrader/core/utils/lti/: __init__.py  client.py  config.py  exceptions.py  models.py
bytegrader/extensions/lab/: __init__.py  labextension.py
bytegrader/extensions/lab/handlers/: assignment.py  auth.py  base.py  course.py  submission.py
bytegrader/extensions/lab/schemas/: assignment.py  base.py
bytegrader/extensions/lab/services/: assignment.py  course.py  submission.py
bytegrader/handlers/: assignment.py  auth.py  base.py  course.py  submission.py
bytegrader/preprocessors/: base.py  factory.py
bytegrader/preprocessors/transform/: __init__.py  clear_markingscheme.py  clear_solutions.py  clear_tests.py  lockcells.py
bytegrader/repositories/: __init__.py  asset.py  assignment.py  base.py  course.py  submission.py  user.py
bytegrader/schemas/: assignment.py  base.py  course.py
bytegrader/services/: assignment.py  course.py  submission.py
bytegrader/tasks/: lti_sync.py  scheduler.py
docker/: .gitignore
docker/bytegrader/: bytegrader_config.py
docker/jupyterhub/: Dockerfile  jupyterhub_config.py
docker/keys/: README.md
docker/moodle/: Dockerfile  config.php.template  docker-entrypoint.sh
docs/Writerside/: hi.tree  redirection-rules.xml  writerside.cfg
etc/jupyter/jupyter_server_config.d/: bytegrader.json
example/: bytegrader.db  bytegrader_config.py  jupyterhub_config.py  private.pem  public.pem  start.sh
executors/systemd/: README.md  pyproject.toml
executors/systemd/bytegrader_systemd/: __init__.py  config.py  executor.py  job_bundle.py  runner.py  systemd_runner.py
src/: index.ts  utils.ts
src/assignment-creation/: cell-strip.ts  index.ts  mode-manager.ts  model.ts  overlay.ts
src/components/: AssignmentsList.tsx  CoursesListPage.tsx  ErrorBoundary.tsx  TopBar.tsx
src/components/dialogs/: ConfirmationDialog.tsx  CreateCourseDialog.tsx  EditCourseDialog.tsx  EnrollmentsDialog.tsx  ErrorDialog.tsx  FilePickerDialog.tsx  WidgetModal.tsx
src/components/shared/: AssignmentActionButtons.tsx  Badges.tsx  DueDateDisplay.tsx  LoadingStates.tsx  NotebookList.tsx
src/components/wizards/: CreateAssignmentWizard.tsx
src/constants/: index.ts
src/hooks/: useAssignmentPermissions.ts  useErrorHandler.ts  usePermissions.ts  useScrollDetection.ts
src/services/: api.ts
src/stores/: assignmentsStore.ts  coursesStore.ts  userStore.ts
src/types/: api.ts  assets.d.ts
src/utils/: themeSync.tsx
src/widgets/: AssignmentsListWidget.tsx  CoursesListWidget.tsx
style/: assignment-creation.css  index.css
