[project]
name = "bytegrader-executor-systemd"
version = "0.0.2"
description = "Systemd-based executor package for BYTEGrader"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "bytegrader"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bytegrader = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["bytegrader_systemd"]

[tool.hatch.build.targets.sdist]
include = [
    "bytegrader_systemd",
]